--- a/bioknowledge_reviewer/graph_v3.2_v20190616.ipynb
+++ b/bioknowledge_reviewer/graph_v3.2_v20190616.ipynb
@@ -792,7 +792,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1609,7 +1609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
