--- a/bioknowledge_reviewer/HD_Graph.ipynb
+++ b/bioknowledge_reviewer/HD_Graph.ipynb
@@ -622,16 +622,16 @@
     "neighboursList = monarch.get_neighbours_list(seedList)\n",
     "print(\"Nodes 1st degree neighbours:\")\n",
     "print(len(neighboursList))\n",
-    "\n",
+    "# introduce animal model orthologs for seed nodes, can count as the 1st shell\n",
     "seed_orthophenoList = monarch.get_orthopheno_list(seedList)\n",
     "print(len(seed_orthophenoList))\n",
-    "## For 1st shell nodes:\n",
+    "## For 2nd shell nodes, or specifically, the neigbours of the seed nodes and captured orthologs in last query:\n",
     "neighbours_orthophenoList = monarch.get_orthopheno_list(neighboursList)\n",
     "print(len(neighbours_orthophenoList))\n",
     "\n",
     "node_list = sum([seedList, neighboursList, seed_orthophenoList, neighbours_orthophenoList], \n",
     "               [])\n",
-    "\n",
+    "## running this function creates the 3nd shell of nodes.\n",
     "monarch_network = monarch.extract_edges(node_list)\n",
     "print(\"connections after 2nd degree:\")\n",
     "print(len(monarch_network))\n",
