--- a/bioknowledge_reviewer/graph_v3.2_v20190616.ipynb
+++ b/bioknowledge_reviewer/graph_v3.2_v20190616.ipynb
@@ -1595,7 +1595,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1609,7 +1609,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
