Added documentation to a majority of the files

--- a/bioknowledge_reviewer/graph_v3.2_v20190616.ipynb
+++ b/bioknowledge_reviewer/graph_v3.2_v20190616.ipynb
@@ -965,8 +965,8 @@
     "# network nodes: seed + 1shell + ortholog-phentoype\n",
     "geneList = sum([seedList,\n",
     "                neighboursList,\n",
-    "                #seed_orthophenoList,\n",
-    "                #neighbours_orthophenoList\n",
+    "                seed_orthophenoList,\n",
+    "                neighbours_orthophenoList\n",
     "               ], \n",
     "               [])\n",
     "print('genelist: ',len(geneList))\n",
