edge prediction algorithms

--- a/bioknowledge_reviewer/HD_Graph.ipynb
+++ b/bioknowledge_reviewer/HD_Graph.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "import transcriptomics, regulation, curation, monarch, graph, neo4jlib, hypothesis, summary, utils\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import webbrowser"
    ]
   },
   {
@@ -10458,7 +10459,8 @@
     "neo4jlib.save_neo4j_files(concepts, neo4j_path, file_type = 'concepts')\n",
     "\n",
     "## import graph into neo4j database\n",
-    "neo4jlib.do_import(neo4j_path)"
+    "neo4jlib.do_import(neo4j_path)\n",
+    "webbrowser.open('http://localhost:7474/browser/?cmd=play&arg=http://localhost:8001/html/guide.html')"
    ]
   },
   {
